[project]
name = "tengen"
version = "23.2.0"
description = "Collection of notebooks to manage reference solar irradiance spectrum datasets."
authors = [
    {name = "Yvan Nollet", email = "yvan.nollet@rayference.eu"},
]
dependencies = [
    "numpy>=1.23.4",
    "xarray>=2022.11.0",
    "pint>=0.20.1",
    "requests>=2.28.1",
    "pandas>=1.5.1",
    "netcdf4>=1.6.1",
    "h5netcdf>=1.0.2",
    "nbstripout>=0.6.1",
    "nbconvert>=7.2.8",
    "jupyterlab>=3.5.2",
    "matplotlib>=3.6.3",
]
requires-python = ">=3.8"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
